[tool.poetry]
name = "project-2-repko-m25-555"
version = "0.1.0"
description = ""
authors = ["andr3w13 <petrarka895@gmail.com>"]

packages = [
    { include = "src" },
]

[tool.poetry.scripts]
database = "src.primitive_db.main:main"

[tool.poetry.dependencies]
python = ">=3.10"
prompt = "^0.4.1"
prettytable = "^3.16.0"

[tool.ruff]
line-length = 88
target-version = "py312"
exclude = ["venv", ".venv", "dist", "__pycache__"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ruff (>=0.14.3,<0.15.0)"
]
